Update build configuration